--- a/arch/arm64/configs/atoll_defconfig
+++ b/arch/arm64/configs/atoll_defconfig
@@ -66,9 +66,10 @@ CONFIG_NR_CPUS=8
 CONFIG_PREEMPT=y
 #ifdef OPLUS_FEATURE_HEALTHINFO
 #wenbin.liu@PSW.BSP.MM, 2018/06/14 Delete for improve performance
-#CONFIG_HZ_100=y
-CONFIG_HZ_250=y
+CONFIG_HZ_100=y
+#CONFIG_HZ_250 is not set
 #endif /* OPLUS_FEATURE_HEALTHINFO */
+CONFIG_HZ=100
 CONFIG_MEMORY_HOTPLUG=y
 CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE=y
 CONFIG_MEMORY_HOTPLUG_MOVABLE_NODE=y
