atoll_defconfig: Rename kernel and enable some configs

--- a/arch/arm64/configs/atoll_defconfig
+++ b/arch/arm64/configs/atoll_defconfig
@@ -1,5 +1,5 @@
 CONFIG_HOTPLUG_SIZE_BITS=29
-CONFIG_LOCALVERSION="-AEX"
+CONFIG_LOCALVERSION="-Rhinestone"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -1002,4 +1002,14 @@ CONFIG_NANDSWAP=y
 # Wlan
 CONFIG_QCA_CLD_WLAN=y
 
+#PELT 
 CONFIG_PELT_UTIL_HALFLIFE_16=y
+
+#default gov
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
+
+#Boeffla WL Blocker
+CONFIG_BOEFFLA_WL_BLOCKER=y
+
+#Enable Kernel Space battery saver
+CONFIG_BATTERY_SAVER=y
