--- a/arch/arm64/configs/atoll_defconfig
+++ b/arch/arm64/configs/atoll_defconfig
@@ -4,6 +4,7 @@ CONFIG_LOCALVERSION="-Rhinestone"
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
+CONFIG_DEFAULT_HOSTNAME="debdeep199x"
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
@@ -65,8 +66,11 @@ CONFIG_NR_CPUS=8
 CONFIG_PREEMPT=y
 #ifdef OPLUS_FEATURE_HEALTHINFO
 #wenbin.liu@PSW.BSP.MM, 2018/06/14 Delete for improve performance
-#CONFIG_HZ_100=y
+# CONFIG_HZ_100=y
+# CONFIG_HZ_300 is not set
+# CONFIG_HZ_1000 is not set
 CONFIG_HZ_250=y
+CONFIG_HZ=250
 #endif /* OPLUS_FEATURE_HEALTHINFO */
 CONFIG_MEMORY_HOTPLUG=y
 CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE=y
@@ -93,6 +97,7 @@ CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_CPU_IDLE=y
+CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 CONFIG_ARM_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
@@ -103,6 +108,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
@@ -451,6 +457,7 @@ CONFIG_SONY_FF=y
 CONFIG_HID_BETOP_FF=y
 CONFIG_OPLUS_CHARGER=y
 CONFIG_OPLUS_SM7125R_CHARGER=y
+CONFIG_HWMON=y
 CONFIG_OPLUS_CHIP_SOC_NODE=y
 CONFIG_OPLUS_SHORT_HW_CHECK=y
 CONFIG_OPLUS_SHORT_USERSPACE=y
@@ -472,6 +479,7 @@ CONFIG_THERMAL_GOV_USER_SPACE=y
 CONFIG_THERMAL_GOV_LOW_LIMITS=y
 CONFIG_CPU_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
+CONFIG_THERMAL_HWMON=y
 CONFIG_QCOM_SPMI_TEMP_ALARM=y
 CONFIG_THERMAL_TSENS=y
 CONFIG_QTI_THERMAL_LIMITS_DCVS=y
@@ -1003,10 +1011,9 @@ CONFIG_NANDSWAP=y
 CONFIG_QCA_CLD_WLAN=y
 
 #PELT 
-CONFIG_PELT_UTIL_HALFLIFE_16=y
-
-#default gov
-CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
+CONFIG_PELT_UTIL_HALFLIFE_32=y
+# CONFIG_PELT_UTIL_HALFLIFE_16 is not set
+# CONFIG_PELT_UTIL_HALFLIFE_8 is not set
 
 #Boeffla WL Blocker
 CONFIG_BOEFFLA_WL_BLOCKER=y
