--- a/arch/arm64/configs/atoll_defconfig
+++ b/arch/arm64/configs/atoll_defconfig
@@ -1010,7 +1010,9 @@ CONFIG_NANDSWAP=y
 # Wlan
 CONFIG_QCA_CLD_WLAN=y
 
-#PELT 
+#
+#PELT
+#
 CONFIG_PELT_UTIL_HALFLIFE_32=y
 # CONFIG_PELT_UTIL_HALFLIFE_16 is not set
 # CONFIG_PELT_UTIL_HALFLIFE_8 is not set
@@ -1020,3 +1022,25 @@ CONFIG_BOEFFLA_WL_BLOCKER=y
 
 #Enable Kernel Space battery saver
 CONFIG_BATTERY_SAVER=y
+
+#
+# Power management options
+#
+CONFIG_SUSPEND=y
+CONFIG_SUSPEND_FREEZER=y
+CONFIG_SUSPEND_SKIP_SYNC=y
+# CONFIG_HIBERNATION is not set
+CONFIG_PM_SLEEP=y
+CONFIG_PM_SLEEP_SMP=y
+# CONFIG_PM_AUTOSLEEP is not set
+CONFIG_PM=y
+# CONFIG_PM_DEBUG is not set
+CONFIG_PM_OPP=y
+CONFIG_PM_CLK=y
+CONFIG_PM_GENERIC_DOMAINS=y
+# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
+CONFIG_PM_GENERIC_DOMAINS_OF=y
+CONFIG_CPU_PM=y
+CONFIG_ARCH_HIBERNATION_POSSIBLE=y
+CONFIG_ARCH_SUSPEND_POSSIBLE=y
